# uv-pipx

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  TEST.md  TODO  TODO.md  Taskfile.yml  UV.md  bandit.yaml  mkdocs-pre-build.sh  mkdocs.yml  mkdocs_requirements.txt  prepare.sh  pyproject.toml  renovate.json  ruff.toml
.devcontainer/: Dockerfile  debug-install.sh  devcontainer.json  post-create.sh
docs/: config.md  container.md  docker.md  index.md  problems.md  troubleshooting.md  usable.md
example/docker/: Dockerfile  pyproject.toml
example/docker/app/: my_app.py
tests/: test_args.py  test_colors.py  test_stylist.py  test_text_formatter.py  test_uvpipx_base.py  test_uvpipx_cmd.py  test_uvpipx_expose.py  test_uvpipx_inject.py  test_uvpipx_upgrade.py
uvpipx/: UvPipxEnv.py  UvPipxModels.py  UvPipxModelsUpgrader.py  __main__.py  cmd_launcher.py  config.py  req_spec.py  uvpipx.py  uvpipx_all.py  uvpipx_args.py  uvpipx_bins.py  uvpipx_console_scripts.py  uvpipx_core.py  uvpipx_expose.py  uvpipx_infos.py  uvpipx_inject.py  uvpipx_install.py  uvpipx_run.py  uvpipx_upgrade.py  uvpipx_uv.py  uvpipx_venv_factory.py  uvpipx_venv_load.py  version.py
uvpipx/internal_libs/: Logger.py  args.py  colors.py  http_utils.py  misc.py  print.py  stylist.py  text_formatter.py
uvpipx/platform/: __init__.py  win.py
