[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "uvpipx"
description = "A small tool like pipx using uv behind the scene. Fast, Small ..."
version = "0.6.0" # to bump
authors = [
  "Pytgaen <32298455+pytgaen@users.noreply.github.com>",
]
readme = "README.md"
license = "GPL"

homepage = "https://gitlab.com/pytgaen-group/uvpipx"
repository = "https://gitlab.com/pytgaen-group/uvpipx"
# documentation = "https://gitlab.com/pytgaen-group/uvpipx" # gitlab page 

include = [
  "uvpipx",
]

[tool.poetry.dependencies]
python = "^3.8"         # not 3.7 because we use pytest
uv = ">=0.1.45, <1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
# infer-types = "^1.0.0"

# mkdocs
mkdocs = { version = "1.6.0" }
mkdocs-material-extensions = { version = "1.3.1" }
mkdocs-material = { version = "9.5.25" }
mkdocs-mermaid2-plugin = { version = "1.1.1" }
# mkdocs-build-plantuml-plugin = { version = "~1.8.0" }
mkdocs-minify-plugin = { version = "0.8.0" }
pymdown-extensions = { version = "10.8.1" }
# mkdocs-kroki-plugin = { version = "0.7.1" }
mkdocstrings = { version = "0.25.1", extras = [
  "python",
] }

mergedeep = { version = "1.3.4" }    # stranges should be managed by mkdocs
pyyaml-env-tag = { version = "0.1" } # stranges should be managed by mkdocs
pathspec = { version = "0.12.1" }    # stranges should be managed by mkdocs
watchdog = { version = "4.0.1" }     # stranges should be managed by mkdocs
regex = { version = "^2024.5.15" }   # stranges should be managed by mkdocs

[tool.poetry.scripts]
uvpipx = 'uvpipx.__main__:main'
